--- a/www/localhost/index.html
+++ b/www/localhost/index.html
@@ -1,1 +1,24 @@
-localhost
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Hello</title>
+</head>
+
+<body>
+
+    <script>
+
+        setTimeout(() => {
+
+            window.location = '/start';
+
+        }, 1000);
+
+    </script>
+</body>
+
+</html>
